--- a/temp.html
+++ b/temp.html
@@ -13,7 +13,7 @@
     <ul>
         <li><a href="user_register.php">User Registration</a></li>
         <li><a href="user_login.php">Login</a></li>
-        <li><a href="about.html">About Us</a></li>
+        <li><a href="logout.php">Logout</a></li>
     </ul>
 </body>
 </html>
