--- a/HomeSection&Img/HomeSection copy.html
+++ b/HomeSection&Img/HomeSection copy.html
@@ -30,22 +30,22 @@
 
     <script>
         const snacks = [
-            { name: "APPLES", price: 0.69, image: '/Users/mac/Downloads/pexels-pixabay-209439.jpg' },
-            { name: "BANANAS", price: 0.99, image: "/Users/mac/Downloads/0420EIOLIBananas_SC.jpg" },
-            { name: "ORANGES", price: 0.69, image: "/Users/mac/Downloads/GettyImages-1205638014-2000-d0fbf9170f2d43eeb046f56eec65319c.jpg" },
-            { name: "GRAPES", price: 1.49, image: "/Users/mac/Downloads/k_Photo_Series_2022-11-types-of-grapes-explainer_types-of-grapes_009.jpg" },
-            { name: "STRAWBERRIES", price: 3.99, image: "/Users/mac/Downloads/download.jpg" },
-            { name: "MANGOES", price: 0.69, image: "/Users/mac/Downloads/5-health-benefits-of-mango-iStock-463651383.jpg" },
-            { name: "WATERMELONS", price: 5.49, image: "/Users/mac/Downloads/fresh-ripe-watermelon-slices-on-wooden-table-royalty-free-image-1684966820.jpg" },
-            { name: "PINEAPPLES", price: 3.99, image: "/Users/mac/Downloads/intro-1684948369.jpg" },
-            { name: "PEACHES", price: 1.49, image: "/Users/mac/Downloads/SES-how-to-ripen-peaches-2216828-hero-01-d5362bc052394e9893883e788dd5ec8d.jpg" },
-            { name: "KIWIFRUITS", price: 0.49, image: "/Users/mac/Downloads/download-1.jpg" },
-            { name: "LEMONS", price: 0.69, image: "/Users/mac/Downloads/intro-1699033243.jpg" },
-            { name: "DRAGONFRUIT", price: 1.99, image: "/Users/mac/Downloads/white-dragon-fruit-royalty-free-image-1594218654.jpg" },
-            { name: "GUAVAS", price: 1.29, image: "/Users/mac/Downloads/guava©iStock.avif" },
-            { name: "PAPAYAS", price: 3.49, image: "/Users/mac/Downloads/Papaya-cover-photo-1_600x.webp" },
-            { name: "PLUMS", price: 0.69, image: "/Users/mac/Downloads/ten-secrets-of-plums-70896-1.jpg" },
-            { name: "BLUEBERRIES", price: 0.99, image: "/Users/mac/Downloads/WhatsAppImage2020-09-07at1.26.19PM.jpg" }
+            { name: "APPLES", price: 0.69, image: 'pexels-pixabay-209439.jpg' },
+            { name: "BANANAS", price: 0.99, image: "0420EIOLIBananas_SC.jpg" },
+            { name: "ORANGES", price: 0.69, image: "GettyImages-1205638014-2000-d0fbf9170f2d43eeb046f56eec65319c.jpg" },
+            { name: "GRAPES", price: 1.49, image: "k_Photo_Series_2022-11-types-of-grapes-explainer_types-of-grapes_009.jpg" },
+            { name: "STRAWBERRIES", price: 3.99, image: "download.jpg" },
+            { name: "MANGOES", price: 0.69, image: "5-health-benefits-of-mango-iStock-463651383.jpg" },
+            { name: "WATERMELONS", price: 5.49, image: "fresh-ripe-watermelon-slices-on-wooden-table-royalty-free-image-1684966820.jpg" },
+            { name: "PINEAPPLES", price: 3.99, image: "intro-1684948369.jpg" },
+            { name: "PEACHES", price: 1.49, image: "SES-how-to-ripen-peaches-2216828-hero-01-d5362bc052394e9893883e788dd5ec8d.jpg" },
+            { name: "KIWIFRUITS", price: 0.49, image: "download-1.jpg" },
+            { name: "LEMONS", price: 0.69, image: "intro-1699033243.jpg" },
+            { name: "DRAGONFRUIT", price: 1.99, image: "white-dragon-fruit-royalty-free-image-1594218654.jpg" },
+            { name: "GUAVAS", price: 1.29, image: "guava©iStock.avif" },
+            { name: "PAPAYAS", price: 3.49, image: "Papaya-cover-photo-1_600x.webp" },
+            { name: "PLUMS", price: 0.69, image: "ten-secrets-of-plums-70896-1.jpg" },
+            { name: "BLUEBERRIES", price: 0.99, image: "WhatsAppImage2020-09-07at1.26.19PM.jpg" }
         ];
 
         const snackList = document.getElementById('snack-list');
